# Chinese-Chess

./: README.md  pyproject.toml  render.yaml  requirements.txt
src/chinese_chess/: __init__.py  cli.py  game.py  web.py
